--- a/regapp-deploy.yml
+++ b/regapp-deploy.yml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1 
 kind: Deployment
 metadata:
-  name: valaxy-regapp
+  name: ekscluster-registrationapp
   labels: 
-     app: regapp
+     app: registrationapp
 
 spec:
   replicas: 2 
   selector:
     matchLabels:
-      app: regapp
+      app: registrationapp
 
   template:
     metadata:
       labels:
-        app: regapp
+        app: registrationapp
     spec:
       containers:
-      - name: regapp
-        image: valaxy/regapp
+      - name: registrationapp
+        image: tanu2802/registrationapp
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
