--- a/regapp-service.yml
+++ b/regapp-service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: valaxy-service
+  name: ekscluster-service
   labels:
-    app: regapp 
+    app: registrationapp 
 spec:
   selector:
-    app: regapp 
+    app: registrationapp 
 
   ports:
     - port: 8080
