--- a/regapp-service.yml
+++ b/regapp-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ekscluster-service
+  name: regapp-service
   labels:
     app: registrationapp 
 spec:
